--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "js-chess-engine": "^0.11.3",
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
